--- a/src/main/resources/static/categoryCoupe.html
+++ b/src/main/resources/static/categoryCoupe.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Intershop.ua</title>
+    <title>Coupe</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse" id="navbarScroll">
             <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                 <li class="nav-item" style="margin-right: 30px">
-                    <a class="nav-link active fs-2" aria-current="page" href="/">Home</a>
+                    <a class="nav-link fs-2" aria-current="page" href="/">Home</a>
                 </li>
                 <li class="nav-item dropdown" style="margin-right: 30px">
                     <a class="nav-link fs-2 dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -66,6 +66,75 @@
     </div>
 </nav>
 
+<div>
+    <p>Coupe</p>
+</div>
+
+<!-- ------------------------Products------------------------ -->
+
+<div class="card mb-3" style="max-width:1500px; height: 240px; margin-left: 40px">
+    <div class="row g-0" >
+        <div class="col-md-4">
+            <img src="..." class="img-fluid rounded-start" alt="Lamborghini Gallardo">
+        </div>
+        <div class="col-md-8">
+            <div class="card-body">
+                <h5 class="card-title">Car1</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                    content. This content is a little bit longer.</p>
+                <button class="logout">Add to Basket</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="card mb-3" style="max-width:1500px; height: 240px; margin-left: 40px">
+    <div class="row g-0" >
+        <div class="col-md-4">
+            <img src="..." class="img-fluid rounded-start" alt="Lamborghini Gallardo">
+        </div>
+        <div class="col-md-8">
+            <div class="card-body">
+                <h5 class="card-title">Car2</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                    content. This content is a little bit longer.</p>
+                <button class="logout">Add to Basket</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="card mb-3" style="max-width:1500px; height: 240px; margin-left: 40px">
+    <div class="row g-0" >
+        <div class="col-md-4">
+            <img src="..." class="img-fluid rounded-start" alt="Lamborghini Gallardo">
+        </div>
+        <div class="col-md-8">
+            <div class="card-body">
+                <h5 class="card-title">Car3</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                    content. This content is a little bit longer.</p>
+                <button class="logout">Add to Basket</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="card mb-3" style="max-width:1500px; height: 240px; margin-left: 40px">
+    <div class="row g-0" >
+        <div class="col-md-4">
+            <img src="..." class="img-fluid rounded-start" alt="Lamborghini Gallardo">
+        </div>
+        <div class="col-md-8">
+            <div class="card-body">
+                <h5 class="card-title">Car4</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                    content. This content is a little bit longer.</p>
+                <button class="logout">Add to Basket</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- ------------------------Products------------------------ -->
+
+<!-- Footer -->
 <footer class="footer">
     <div class="container p-4">
         <div class="row">
@@ -82,22 +151,14 @@
                     <li><i class="bi bi-envelope"></i> Email : valeriyliubimyi@gmail.com</li>
                 </ul>
             </div>
+
             <div class="col-lg-4 col-md-12 mb-4">
                 <h5>Our social media</h5>
-                <ul class="list-unstyled">
-                    <li>
-                        <a href="https://www.facebook.com/" target="_blank" class="social-link">
-                            <i class="bi bi-facebook"></i> Facebook</a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/" target="_blank" class="social-link">
-                            <i class="bi bi-instagram"></i> Instagram</a>
-                    </li>
-                    <li>
-                        <a href="https://www.youtube.com/" target="_blank" class="social-link">
-                            <i class="bi bi-youtube"></i> YouTube</a>
-                    </li>
-                </ul>
+                <a href="https://www.facebook.com/" target="_blank" class="footer"><i class="bi bi-facebook"></i>
+                    Facebook</a><br>
+                <a href="https://www.instagram.com/" target="_blank" class="footer"><i class="bi bi-instagram"></i>
+                    Instagram</a><br>
+                <a href="https://www.youtube.com/" target="_blank" class="footer"><i class="bi bi-youtube"></i> YouTube</a>
             </div>
         </div>
 
