--- a/src/main/resources/static/categoryPickup.html
+++ b/src/main/resources/static/categoryPickup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Intershop.ua</title>
+    <title>Pickup</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -65,39 +65,30 @@
         </div>
     </div>
 </nav>
-
+<div>
+    <p>Pickup</p>
+</div>
 <footer class="footer">
     <div class="container p-4">
         <div class="row">
             <div class="col-lg-4 col-md-6 mb-4">
                 <h5>About Us</h5>
-                <p>We provide the best cars at affordable prices. Reliability, quality and comfort are our top
-                    priorities.</p>
+                <p>We provide the best cars at affordable prices. Reliability, quality and comfort are our top priorities.</p>
             </div>
             <div class="col-lg-4 col-md-6 mb-4">
                 <h5>Contacts</h5>
                 <ul class="list-unstyled">
-                    <li><i class="bi bi-geo-alt"></i> Address : Autostreet 24 ,London City</li>
+                    <li><i class="bi bi-geo-alt"></i> Address : Autostreet 24 ,London City </li>
                     <li><i class="bi bi-telephone"></i> Telephone : +38 (097) 641-72-37</li>
                     <li><i class="bi bi-envelope"></i> Email : valeriyliubimyi@gmail.com</li>
                 </ul>
             </div>
+
             <div class="col-lg-4 col-md-12 mb-4">
                 <h5>Our social media</h5>
-                <ul class="list-unstyled">
-                    <li>
-                        <a href="https://www.facebook.com/" target="_blank" class="social-link">
-                            <i class="bi bi-facebook"></i> Facebook</a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/" target="_blank" class="social-link">
-                            <i class="bi bi-instagram"></i> Instagram</a>
-                    </li>
-                    <li>
-                        <a href="https://www.youtube.com/" target="_blank" class="social-link">
-                            <i class="bi bi-youtube"></i> YouTube</a>
-                    </li>
-                </ul>
+                <a href="https://www.facebook.com/" target="_blank" class="footer"><i class="bi bi-facebook"></i> Facebook</a><br>
+                <a href="https://www.instagram.com/" target="_blank" class="footer"><i class="bi bi-instagram"></i> Instagram</a><br>
+                <a href="https://www.youtube.com/" target="_blank" class="footer"><i class="bi bi-youtube"></i> YouTube</a>
             </div>
         </div>
 
