--- a/src/main/resources/static/contact.html
+++ b/src/main/resources/static/contact.html
@@ -39,11 +39,11 @@
                         Categories
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Sedan</a></li>
-                        <li><a class="dropdown-item" href="#">Hatchback</a></li>
-                        <li><a class="dropdown-item" href="#">SUV</a></li>
-                        <li><a class="dropdown-item" href="#">Coupe</a></li>
-                        <li><a class="dropdown-item" href="#">Pickup</a></li>
+                        <li><a class="dropdown-item" href="categorySedan.html">Sedan</a></li>
+                        <li><a class="dropdown-item" href="categoryHatchback.html">Hatchback</a></li>
+                        <li><a class="dropdown-item" href="categorySUV.html">SUV</a></li>
+                        <li><a class="dropdown-item" href="categoryCoupe.html">Coupe</a></li>
+                        <li><a class="dropdown-item" href="categoryPickup.html">Pickup</a></li>
                     </ul>
                 </li>
                 <li class="nav-item" style="margin-right: 30px">
