--- a/src/main/resources/static/contact.html
+++ b/src/main/resources/static/contact.html
@@ -58,7 +58,7 @@
             </ul>
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <button class="btn" type="submit">Search</button>
             </form>
         </div>
     </div>
@@ -106,12 +106,11 @@
             <!-- Социальные сети -->
             <div class="col-lg-4 col-md-12 mb-4">
                 <h5>Our social media</h5>
-                <a href="https://www.facebook.com/" target="_blank" class="footer"><i
-                        class="bi bi-facebook"></i> Facebook</a><br>
-                <a href="https://www.instagram.com/" target="_blank" class="footer"><i
-                        class="bi bi-instagram"></i> Instagram</a><br>
-                <a href="https://www.youtube.com/" target="_blank" class="footer"><i class="bi bi-youtube"></i>
-                    YouTube</a>
+                <a href="https://www.facebook.com/" target="_blank" class="footerLinks"><i class="bi bi-facebook"></i>
+                    Facebook</a><br>
+                <a href="https://www.instagram.com/" target="_blank" class="footerLinks"><i class="bi bi-instagram"></i>
+                    Instagram</a><br>
+                <a href="https://www.youtube.com/" target="_blank" class="footerLinks"><i class="bi bi-youtube"></i> YouTube</a>
             </div>
         </div>
 
