--- a/src/main/resources/static/myPage.html
+++ b/src/main/resources/static/myPage.html
@@ -53,7 +53,7 @@
                     <a class="nav-link fs-2" href="contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item" style="margin-right: 30px">
-                    <a class="nav-link active fs-2 " href="/">My Page</a>
+                    <a class="nav-link active fs-2 " href="/static">My Page</a>
                 </li>
             </ul>
             <form class="d-flex" role="search">
