--- a/src/main/resources/static/contact.html
+++ b/src/main/resources/static/contact.html
@@ -50,7 +50,7 @@
                     <a class="nav-link fs-2" href="#">Basket</a>
                 </li>
                 <li class="nav-item" style="margin-right: 30px;">
-                    <a class="nav-link active fs-2" href="/">Contact Us</a>
+                    <a class="nav-link active fs-2" href="/static">Contact Us</a>
                 </li>
                 <li class="nav-item" style="margin-right: 30px;">
                     <a class="nav-link fs-2 " href="myPage.html">My Page</a>
