--- a/src/main/resources/static/myPage.html
+++ b/src/main/resources/static/myPage.html
@@ -47,7 +47,7 @@
                     </ul>
                 </li>
                 <li class="nav-item" style="margin-right: 30px">
-                    <a class="nav-link fs-2" href="#">Basket</a>
+                    <a class="nav-link fs-2" href="basket.html">Basket</a>
                 </li>
                 <li class="nav-item" style="margin-right: 30px">
                     <a class="nav-link fs-2" href="contact.html">Contact Us</a>
@@ -63,10 +63,16 @@
         </div>
     </div>
 </nav>
+
 <div class="userText">
     <img src="5B5D6D93-F976-4771-A1AC-569E48E064C9_1_201_a.jpeg" class="userPhoto">
     <h1>User</h1>
     <span class="userEmail">Email: user@email.com</span><br><br>
+    <button class="logout">My Orders</button>
+    <a href="basket.html">
+        <button class="logout">My Basket</button>
+        <br><br>
+    </a>
     <button class="logout">Log out</button>
     <br><br>
 </div>
@@ -95,7 +101,8 @@
                     Facebook</a><br>
                 <a href="https://www.instagram.com/" target="_blank" class="footerLinks"><i class="bi bi-instagram"></i>
                     Instagram</a><br>
-                <a href="https://www.youtube.com/" target="_blank" class="footerLinks"><i class="bi bi-youtube"></i> YouTube</a>
+                <a href="https://www.youtube.com/" target="_blank" class="footerLinks"><i class="bi bi-youtube"></i>
+                    YouTube</a>
             </div>
         </div>
 
