--- a/src/main/resources/static/basket.html
+++ b/src/main/resources/static/basket.html
@@ -2,14 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Intershop.ua</title>
+    <title>Basket</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
-
-    <!-- Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
     <!--Icon https://favicon.io/favicon-generator/-->
@@ -23,8 +21,8 @@
 <!--Navbar https://getbootstrap.com/docs/5.3/components/navbar/#scrolling -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-black">
     <div class="container-fluid">
-       <a class="navbar-brand" href="/">
-            <img src="apple-touch-icon.png" alt="IShop" width="80" style="margin-left: 30px ; margin-right: 30px;">
+        <a class="navbar-brand" href="/">
+            <img src="apple-touch-icon.png" alt="IShop" width="80" style="margin-left: 30px ; margin-right: 30px">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,10 +30,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarScroll">
             <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                <li class="nav-item" style="margin-right: 30px">
-                    <a class="nav-link active fs-2" aria-current="page" href="/">Home</a>
+                <li class="nav-item" style="margin-right: 30px;">
+                    <a class="nav-link fs-2" aria-current="page" href="/">Home</a>
                 </li>
-                <li class="nav-item dropdown" style="margin-right: 30px">
+                <li class="nav-item dropdown" style="margin-right: 30px;">
                     <a class="nav-link fs-2 dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                        aria-expanded="false">
                         Categories
@@ -49,12 +47,12 @@
                     </ul>
                 </li>
                 <li class="nav-item" style="margin-right: 30px">
-                    <a class="nav-link fs-2" href="basket.html">Basket</a>
+                    <a class="nav-link active fs-2" href="/">Basket</a>
                 </li>
-                <li class="nav-item" style="margin-right: 30px">
+                <li class="nav-item" style="margin-right: 30px;">
                     <a class="nav-link fs-2" href="contact.html">Contact Us</a>
                 </li>
-                <li class="nav-item" style="margin-right: 30px">
+                <li class="nav-item" style="margin-right: 30px;">
                     <a class="nav-link fs-2 " href="myPage.html">My Page</a>
                 </li>
             </ul>
@@ -66,52 +64,7 @@
     </div>
 </nav>
 
-<div>
-    <img src="intershopLogo.png" class="imageHome"><br><br>
-</div>
-
-
-<!-- Card https://getbootstrap.com/docs/5.3/components/card/-->
-
-<div class="row row-cols-1 row-cols-md-3 g-4" style="margin-bottom: 50px">
-    <div class="col">
-        <div class="card h-100">
-            <div class="card-body">
-                <i class="bi bi-cart homeCard-icon"></i>
-                <h5 class="card-title" style="text-align: center; font-size: 30px">Basket</h5><br>
-                <p class="card-text" style="text-align: center; font-size: 20px">Your Basket with products You want to
-                    buy</p>
-            </div>
-            <a href="basket.html">
-                <button class="logout" style="width: 50% ; margin-left: 25%; margin-bottom: 10px">Go!</button>
-            </a></div>
-    </div>
-    <div class="col">
-        <div class="card h-100">
-            <div class="card-body">
-                <i class="bi bi-person homeCard-icon"></i>
-                <h5 class="card-title" style="text-align: center; font-size: 30px">My Page</h5><br>
-                <p class="card-text" style="text-align: center; font-size: 20px">Go on your account page!</p>
-            </div>
-            <a href="myPage.html">
-                <button class="logout" style="width: 50% ; margin-left: 25%; margin-bottom: 10px">Go!</button>
-            </a>
-        </div>
-    </div>
-    <div class="col">
-        <div class="card h-100">
-            <div class="card-body">
-                <i class="bi bi-telephone homeCard-icon"></i>
-                <h5 class="card-title" style="text-align: center; font-size: 30px">Contact Us!</h5><br>
-                <p class="card-text" style="text-align: center; font-size: 20px">Hello! Welcome to intershop.ua! If you
-                    need a help, please contact us.</p>
-            </div>
-            <a href="contact.html">
-                <button class="logout" style="width: 50% ; margin-left: 25%; margin-bottom: 10px">Go!</button>
-            </a></div>
-    </div>
-</div>
-
+<p id="basketLine">Here is your Basket</p>
 
 <footer class="footer">
     <div class="container p-4">
@@ -129,6 +82,8 @@
                     <li><i class="bi bi-envelope"></i> Email : valeriyliubimyi@gmail.com</li>
                 </ul>
             </div>
+
+            <!-- Социальные сети -->
             <div class="col-lg-4 col-md-12 mb-4">
                 <h5>Our social media</h5>
                 <a href="https://www.facebook.com/" target="_blank" class="footerLinks"><i class="bi bi-facebook"></i>
@@ -146,6 +101,5 @@
         </div>
     </div>
 </footer>
-
 </body>
 </html>
