--- a/src/main/resources/static/categoryPickup.html
+++ b/src/main/resources/static/categoryPickup.html
@@ -49,7 +49,7 @@
                     </ul>
                 </li>
                 <li class="nav-item" style="margin-right: 30px">
-                    <a class="nav-link fs-2" href="#">Basket</a>
+                    <a class="nav-link fs-2" href="basket.html">Basket</a>
                 </li>
                 <li class="nav-item" style="margin-right: 30px">
                     <a class="nav-link fs-2" href="contact.html">Contact Us</a>
