--- a/src/main/resources/static/contact.html
+++ b/src/main/resources/static/contact.html
@@ -47,7 +47,7 @@
                     </ul>
                 </li>
                 <li class="nav-item" style="margin-right: 30px">
-                    <a class="nav-link fs-2" href="#">Basket</a>
+                    <a class="nav-link fs-2" href="basket.html">Basket</a>
                 </li>
                 <li class="nav-item" style="margin-right: 30px;">
                     <a class="nav-link active fs-2" href="/static">Contact Us</a>
